--- a/build
+++ b/build
@@ -56,9 +56,9 @@ main()
     cp --update "$baseDir"/src/* "$scratch"
 
     docker run --rm --tty --user=$(id -u):$(id -g) --volume="$scratch":/src --name=setavu-builder \
-	             irods-dev-build:4.1.10-"$os" make clean all
+	             irods-dev-build:4.1.10-"$os" make all
 
-    mv --force "$scratch"/libmsiSetAVU.so "$library"
+    cp --update "$scratch"/libmsiSetAVU.so "$library"
   done
 }
 
